# video_compress_rs

./: Cargo.toml
src/: main.rs
