[package]
name = "video_compress"
version = "0.1.0"
authors = ["Christofer Bertonha <christoferbertonha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.2.18" }
glob = { version = "0.3.0" }
